--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,8 @@
   <div id="container">
     <div id="post">
       <h1>Este es el título atractivo e interesante del post</h1>
-      <p>Este es el párrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>    
+      <p>Este es el párrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+      <p>Los blogs son la mejor forma de compartir tus ideas.Mucho más que ir a conferencias o salir en YouTube. Excepto si eres un rockstar. Pero estadísticamente no lo eres...Por ahora.</p>   
     </div>
   </div>
 </body>
