--- a/blogpost.html
+++ b/blogpost.html
@@ -11,12 +11,13 @@
   <div id="container">
     <div id="cabecera">
       Hyperblog
-      <span id="tagline">Tu blog de confianza</span>
+      <span id="tagline">Tu blog maestro</span>
     </div>
     <div id="post">
       <h1>Este es el título atractivo e interesante del post</h1>
       <p>Este es el párrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
       <p>Los blogs son la mejor forma de compartir tus ideas.Mucho más que ir a conferencias o salir en YouTube. Excepto si eres un rockstar. Pero estadísticamente no lo eres...Por ahora.</p>   
+      <p>Suscríbete y dale like</p>
     </div>
   </div>
 </body>
